# mh-compressor-manager

./: .gitignore  CONTRIBUTING.md  QWEN.md  README.html  README.md  RECOMMENDED_ACTIONS.md  RULES.md  TECHNICAL_SPECIFICATION.html  TECHNICAL_SPECIFICATION.md  _build.sh  _install.sh  _local-install.sh  _rpm-build.sh  _rpm-install.sh  _translate.sh  build-rpm--prebuild-test.sh  build-rpm.sh  build-test.sh  mh-compressor-manager.spec  rpm_build_instructions.txt  structure_dir.txt  Исследование_минимальный_размер_файла_gzip_brotli.md  ТРЕБОВАНИЯ_минимальный_размер_файла.md
.qwen/: settings.json
audit/: AUDIT_CYCLE.md  AUDIT_FULL_CYCLE.md  CHANGELOG.md  CHECK_DOCUMENTATION.md  CLEANUP_DEAD_CODE.md  README.md  RELEASE_1.0.464.md  ROUND_HISTORY.md  _pr_body.md  check_context_changes.bat  check_context_changes.sh
audit/.context/: last_loaded.txt
completion/: mh-compressor-manager
docs/: README.md
docs/development/: DEPLOY.md  QWEN.md  RULES.md
docs/specification/: TECHNICAL_SPECIFICATION.html  TECHNICAL_SPECIFICATION.md
man/en/man1/: mh-compressor-manager.1
man/ru/man1/: mh-compressor-manager.1
src/: CMakeLists.txt  _build.sh  _install.sh  async_io.cpp  async_io.h  cache_info.cpp  cache_info.h  compressor-manager.conf  compressor-manager.conf.full  compressor.cpp  compressor.h  compressor_server.cpp  config.cpp  config.h  config.ini  i18n.h  logger.cpp  logger.h  main.cpp  memory_pool.h  merge-compressor-conf.sh  mh-compressor-manager.service  monitor.cpp  monitor.h  numa_utils.cpp  numa_utils.h  performance_optimizer.cpp  performance_optimizer.h  pipeline.cpp  pipeline.h  security.cpp  security.h  simd_utils.h  threadpool.h  threadpool_server.h  version.h.in
tests/: CMakeLists.txt  README.md  TEST_SCRIPTS.md
tests/integration/: integration_test.cpp
tests/scripts/: _create_gen_loadtest.py  gen_loadtest.sh  gen_loadtext.sh  loadtest_comprehensive.sh  loadtest_run.sh  quick_loadtest.sh  test_atomicity.sh  test_configurations.sh  test_edge_cases.sh  test_lifecycle_full.sh  test_memory_adaptive.sh  test_move_rename.sh  test_orphan_check.sh  test_race_condition.sh  test_security.sh  test_spec_section18.sh  test_stale_cleanup.sh
tests/unit/: async_io_test.cpp  compressor_test.cpp  config_test.cpp  logger_test.cpp  memory_pool_test.cpp  numa_utils_test.cpp  security_test.cpp  simd_utils_test.cpp  threadpool_test.cpp
translations/: CMakeLists.txt  ru.po
